--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head> 
 
   <body>
-    <center>
+    <center><a href="https://xain7093.github.io/312/">回首頁</a>
       <table border="1" style="width:300px;">
         <tr><th colspan="3" style="color:#FFF; background-color:#000; font-size:14px;font-weight:bold;">九九乘法表</th></tr>
         <tr>
